--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,8 @@
       }
     ]
   ],
-  "plugins": ["@babel/plugin-transform-async-to-generator"]
+  "plugins": [
+    "@babel/plugin-transform-async-to-generator",
+    ["inline-json-import", {}]
+  ]
 }
